# knob_panel

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.old
docs/: Project-Technical-Documentation.docx
main/: CMakeLists.txt  app_audio.c  app_audio.h  app_main.c  voice_announcement.c  voice_announcement.h
main/ui/: ui_boot_animate.h  ui_clockScreen.c  ui_factory.h  ui_language.h  ui_light_2color.c  ui_menu_new.c  ui_thermostat.c
src/: sdkconfig.old
src/main/: CMakeLists.txt  app_audio.c  app_audio.h  settings.c  settings.h
src/main/ui/: ui_boot_animate.c  ui_factory.c  ui_language.c  ui_light_2color.c  ui_light_2color.h  ui_thermostat.h  ui_washing.c
video/: Video(Youtube Link).txt
